# vika-net

./: CMakeLists.txt  README.md  library.h
include/: CTCPClient.hpp  CTCPServer.hpp  CUDPClient.hpp  CUDPServer.h  CUDPServer.hpp
src/: CTCPClient.cpp  CTCPServer.cpp  CUDPClient.cpp  CUDPServer.cpp
test/: TestClient.cpp  TestServer.cpp  TestTCPClient.cpp  TestTCPServerOpenCV.cpp  TestUDPServer.cpp
